// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button default 1`] = `
<button
  class="button primary svelte-1p69ywv"
  data-testid="button-tid"
>
  
</button>
`;

exports[`Button disabled, but not loading 1`] = `
<button
  class=" svelte-1p69ywv"
  data-testid="button-tid"
  disabled=""
>
  undefined
</button>
`;

exports[`Button disabled, loading 1`] = `
<button
  class=" svelte-1p69ywv"
  data-testid="button-tid"
  disabled=""
>
  Loading...
</button>
`;

exports[`Button loading, but not disabled 1`] = `
<button
  class=" svelte-1p69ywv"
  data-testid="button-tid"
>
  Loading...
</button>
`;

exports[`Button not disabled, not loading 1`] = `
<button
  class=" svelte-1p69ywv"
  data-testid="button-tid"
>
  undefined
</button>
`;
